Make sure images in post content aren't too large

--- a/css/default.css
+++ b/css/default.css
@@ -28,3 +28,8 @@ color: black;
 color: darkgray;
 
 }
+
+.post-html > img {
+	width: 100%;
+	height: auto;
+}
